# student-management

./: .env.flask  README.md  docker-compose.yml
student-crud-backend/: .env.example  Dockerfile  README.md  app.py  config.py  pyproject.toml  wait-for-mysql.sh
student-crud-backend/migrations/versions/: 5f8ac12e49b2_create_students_table.py
student-crud-backend/models/: student_model.py
student-crud-backend/students/: routes.py
student-crud-backend/test/: Students.postman_collection.json
student-crud-frontend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
student-crud-frontend/core/: settings.py
student-crud-frontend/students/: urls.py  views.py
student-crud-frontend/students/templates/students/: form.html  index.html
