[project]
name = "student-crud-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "mauricio-pacheco",email = "mauripacheco814@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
